# spotify-client-rs

./: Cargo.toml  LICENSE  readme.md
src/: auth.rs  config.rs  constant.rs  lib.rs  model.rs  utils.rs
src/client/: mod.rs
