[package]
name = "spotify-client-rs"
authors = ["Ennui.lw"]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A util crate for Spotify Auth Client"

[features]
env-file = []
file = []
default = []

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
chrono = "0.4.38"
flume = "0.11.0"
librespot-connect = "0.4.2"
librespot-core = "0.4.2"
maybe-async = "0.2.10"
once_cell = "1.19.0"
rspotify = "0.13.1"
reqwest = { version = "0.12.4", features = ["json"] }
toml = "0.8.13"
config_parser2 = "0.1.5"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
tracing = "0.1.40"
parking_lot = "^0.12.2"
serde = { version = "1.0.202", features = ["derive"] }
dirs-next = "2.0.0"
ttl_cache = "0.5.1"
serde_json = "1.0.117"
dotenvy = "0.15.7"
regex = "1.10.4"
env_logger = "0.11.3"
